--- a/templates/appointment/reserver_rendez_vous.html.twig
+++ b/templates/appointment/reserver_rendez_vous.html.twig
@@ -33,7 +33,7 @@
                     {{ form_errors(form.phoneNumberPatient) }}
                 </div>
                 <div class="col-md-6">
-                    {{ form_label(form.emailPatient)}}<p style="font-size: 12px">Il recevra un SMS lui indiquant les démarches à suivre</p>
+                    {{ form_label(form.emailPatient)}}<p style="font-size: 12px">Il recevra un e-mail lui indiquant les démarches à suivre</p>
                     {{ form_widget(form.emailPatient, {'attr': {'class': 'single-input', 'placeholder': "example@afromed.co"}} ) }}
                     {{ form_errors(form.emailPatient) }}
                 </div>
