--- a/templates/appointment/mes_rendez_vous.html.twig
+++ b/templates/appointment/mes_rendez_vous.html.twig
@@ -29,7 +29,11 @@
             {% for appointment in appointmentsAsBuyer %}
                 <div class="generic-blockquote">
                     Rendez-vous avec Dr. {{ appointment.doctor.username }} <br>
-                    Payé pour {{ appointment.namePatient }} <br>
+                    {% if (appointment.state == constant("App\\Entity\\APPOINTMENT::STATUS_PAID")) %}
+                        Payé pour {{ appointment.namePatient }} <br>
+                    {% else %}
+                        Vous n'avez pas encore payé. <a href="{{ url('reserver_payer', {idAppointment: appointment.id}) }}" class="text-white btn btn-primary">Payer</a><br>
+                    {% endif %}
                     {{ appointment.prestation.name }}<br>
                     <a class="text-info" href="{{ url('rendez_vous_individuel', {'id': appointment.id}) }}">Voir le détail</a>
                 </div><br>
@@ -39,12 +43,14 @@
             <div class="col-lg-4 text-center">
                 <h3>En tant que docteur</h3><br>
                 {% for appointment in appointmentsAsDoctor %}
+                    {% if (appointment.state == constant("App\\Entity\\APPOINTMENT::STATUS_PAID")) %}
                     <div class="generic-blockquote">
                         Rendez-vous avec M. {{ appointment.buyer.username }} <br>
-                        La date n'a pas encoré été fixée. <b>Proposer une date</b><br>
+                        {{ dump(appointment.state) }}
                         {{ appointment.prestation.name }}<br>
                         <a class="text-info" href="{{ url('rendez_vous_individuel', {'id': appointment.id}) }}">Voir le détail</a>
                     </div><br>
+                    {% endif %}
                 {% endfor %}
             </div>
         {% endif %}
