--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,7 @@
                                                         <ul class="submenu">
                                                             <li><a href="{{ url('fos_user_profile_show') }}">Mon profil</a></li>
                                                             <li><a href="{{ url('mes_rendez_vous') }}">Mes rendez-vous</a></li>
+                                                            <li><a href="{{ url('fos_user_security_logout') }}">Déconnexion</a></li>
                                                         </ul>
                                                     </li>
                                                     {% endif %}
