--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -11,6 +11,7 @@
                         <div class="slider_text">
                             <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">   </h3>
                             <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">
+{#                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">Prenez soin de vos proches en Afrique</h3>#}
 {#                                <a href="#" class="boxed-btn3">Trouver un médecin</a>#}
                             </div>
                         </div>
