secure all route + all sms & mail

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -128,7 +128,7 @@
                                         </a>
                                     </div>
                                     <p>
-                                        contact@afromed.co <br>
+                                        contact@sante-universelle.org <br>
                                         +336 66 66 66 66 <br>
                                         123 Rue de la chance, Paris
                                     </p>
