--- a/templates/default/footerLink/contact.html.twig
+++ b/templates/default/footerLink/contact.html.twig
@@ -66,7 +66,7 @@
                 <div class="media contact-info">
                     <span class="contact-info__icon"><i class="ti-email"></i></span>
                     <div class="media-body">
-                        <h3>contact@afromed.co</h3>
+                        <h3>contact@sante-universelle.org</h3>
                         <p>Pour toutes questions !</p>
                     </div>
                 </div>
