--- a/templates/search_doctor/profile_doctor.html.twig
+++ b/templates/search_doctor/profile_doctor.html.twig
@@ -28,8 +28,9 @@
             <br><br>
             <b><i class="fa fa-address-book"> </i> Adresse des consultations : </b><br><br>
             {{ doctor.adress }}<br><br>
+            {% if doctor.adress %}
             <div style="width: auto"><iframe width="100%" height="auto" src="https://maps.google.com/maps?width=100%&height=600&hl=fr&coord={{ doctor.latAdress }},{{doctor.longAdress}}&q={{ doctor.adress }}&ie=UTF8&t=&z=14&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/en/measure-map-radius/">Draw Map Circle</a></iframe></div><br />
-
+            {% endif %}
             <b><i class="fa fa-graduation-cap"> </i> Diplômes : </b><br><br>
             {{ doctor.diploma }}<br><br>
 
