--- a/templates/appointment/reserver_rendez_vous.html.twig
+++ b/templates/appointment/reserver_rendez_vous.html.twig
@@ -46,12 +46,16 @@
                     {{ form_errors(form.namePatient) }}
                 </div>
             </div>
-
+            <br><br>
             <span class="text-center">
                 {{ form_row(form.Reserver, {'attr': {'class' : 'genric-btn info circle arrow'}, label: 'Réserver'}) }}
             </span>
 
             {{ form_end(form) }}
+
+            <br><br>
+            <p class="text-center">Vous pouvez payer en espèce en vous rendant au Tibesti : 233 rue des Pyrénées 75020 Paris.</p>
+
         </div>
     </div>
 
