--- a/templates/admin/doctors/doctors.html.twig
+++ b/templates/admin/doctors/doctors.html.twig
@@ -5,7 +5,7 @@
             Admin - Les médecins
         {% endblock %}
         {% block bodyAdmin %}
-            <div class="container-fluid row p-2" style="background-color: #ffffff; box-sizing: unset;">
+            <div class="container-fluid row p-2" style="background-color: #ffffff; box-sizing: unset;overflow-x: scroll;">
                 <div class="col-lg-1"></div>
                 <div class="col-lg-10 text-center"><br><br>
                     <table class="table table-dark">
