--- a/templates/appointment/reserver_rendez_vous.html.twig
+++ b/templates/appointment/reserver_rendez_vous.html.twig
@@ -20,6 +20,10 @@
         <div class="col-md-4 text-center" style="padding-top: 1%">
             <h2>{{ prestation.name }} avec Dr. {{ doctor.username }}</h2>
             <p>{{ prestation.description }}</p>
+
+            <br><br>
+            <h3 class="text-center">Vous pouvez payer en espèce en vous rendant au Tibesti : 233 rue des Pyrénées 75020 Paris.</h3>
+
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-5" style="padding-top: 1%">
@@ -52,10 +56,6 @@
             </span>
 
             {{ form_end(form) }}
-
-            <br><br>
-            <p class="text-center">Vous pouvez payer en espèce en vous rendant au Tibesti : 233 rue des Pyrénées 75020 Paris.</p>
-
         </div>
     </div>
 
