--- a/templates/admin/doctors/prestations.html.twig
+++ b/templates/admin/doctors/prestations.html.twig
@@ -23,6 +23,10 @@
                     </div>
                 {% endfor %}
 
+
+            </div>
+            <div class="container-fluid text-center">
+                <a class="text-center btn btn-danger" href="{{ url('admin_create_prestation', {id: doctor.id}) }}">Ajouter une prestation</a>
             </div>
 
         {% endblock %}
